--- a/css/styles-v1.2.css
+++ b/css/styles-v1.2.css
@@ -6,7 +6,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	min-height: 100vh;
+    min-height: 96vh;
 }
 
 form {
@@ -19,17 +19,17 @@ input[type='submit'] {
     text-align: center;
     text-decoration: none;
     border: 1px solid #198754;
-    border-radius: 0.25rem;
-    padding: 0.75rem 0.375rem;
+    border-radius: 5px;
+	padding: 1.75rem 1.375rem;
     font-family: 'Calibri';
-    font-size: 1.16rem;
+	font-size: 4.16rem;
     font-weight: 400;
     line-height: 1.5;
     color: #fff;
     background-color: #198754;
     border-color: #198754;
     width: 100%;
-    margin: 0.4rem;
+	margin: 1.55rem;
 }
 input[type='submit']:hover {
 	background-color: #157347;
