--- a/css/styles-v1.3.css
+++ b/css/styles-v1.3.css
@@ -11,6 +11,7 @@ body {
 
 form {
 	width: 80%;
+	text-align: center;
 }
 
 input[type='submit'] {
@@ -20,22 +21,22 @@ input[type='submit'] {
     text-decoration: none;
     border: 1px solid #198754;
     border-radius: 5px;
-	padding: 1.75rem 1.375rem;
+    padding: 0.5vh 1.375rem;
     font-family: 'Calibri';
-	font-size: 4.16rem;
+    font-size: 8vw;
     font-weight: 400;
     line-height: 1.5;
     color: #fff;
     background-color: #198754;
     border-color: #198754;
-    width: 100%;
-	margin: 1.55rem;
+    width: 24vw;
+    margin: 1.55rem;
 }
 input[type='submit']:hover {
 	background-color: #157347;
 }
 h1 {
-	font-size: 3rem;
+	font-size: 6.8vw;
 	line-height: 1.2;
 	margin-top: 0;
     margin-bottom: 0.5rem;
