--- a/css/styles-v1.3.1.css
+++ b/css/styles-v1.3.1.css
@@ -1,3 +1,6 @@
+html {
+	font-family: sans-serif;
+}
 body {
 	background-color: var(--tg-theme-bg-color);
 	color: var(--tg-theme-text-color);
@@ -22,21 +25,20 @@ input[type='submit'] {
     border: 1px solid #198754;
     border-radius: 5px;
     padding: 0.5vh 1.375rem;
-    font-family: 'Calibri';
-    font-size: 8vw;
+	font-size: 5.4vw;
     font-weight: 400;
     line-height: 1.5;
     color: #fff;
     background-color: #198754;
     border-color: #198754;
-    width: 24vw;
+	width: 27.8vw;
     margin: 1.55rem;
 }
 input[type='submit']:hover {
 	background-color: #157347;
 }
 h1 {
-	font-size: 6.8vw;
+	font-size: 5.8vw;
 	line-height: 1.2;
 	margin-top: 0;
     margin-bottom: 0.5rem;
